--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,13 +31,17 @@
   <main>
     <div class="about__main">
       <div class="about__main-container">
+        <div class="about__main-container__inner">
+        <img src="/src/img/ЦентральныйФон.png">
         <div class="about__main-textTop">
           Котлеты на развес
         </div>
         <div class="about__main-textBottom">
           22.05.2021 - Домашние рецепты - Иванов Петр
         </div>
+        </div>
       </div>
+      <div class="container">
       <p class="about__main-info">
         Такое блюдо, как котлета знают все, но мало кто знаком с историей его возникновения.
         Именно французы являются его изобретателями, как, впрочем, и многих других не менее вкусных блюд.
@@ -64,6 +68,7 @@
         считать «родственниками» первоначальных котлет. Приготовить их можно самостоятельно или приобрести уже готовые
         полуфабрикаты в специализированных магазинах.
       </p>
+      </div>
     </div>
   </main>
   <footer class="footer">
