--- a/src/html/index.html
+++ b/src/html/index.html
@@ -72,11 +72,13 @@
     </div>
   </main>
   <footer class="footer">
+    <div class="container">
     <div class="footer__info">
       <div class="footer__info-textLeft">
         © 1990 - 2022 ООО “Вечная кулинария”</div>
       <div class="footer__info-textRight">Дизайн: Руслан Наколенкин</div>
     </div>
+  </div>
   </footer>
 </body>
 
